@startuml

class GameWindow{
    Player : private
    List<Enemy> enemies : private

    List<Projectile> projectiles : private

    void update() : private
    void redraw(Graphics) : private
}

class Player{

}

class RockProjectile{

}

class ArrowProjectile{

}

interface Projectile{

}

interface Enemy{
    void draw(Graphics g)
    void update()
    void setPlayer(Player p)
    void setMap(Map m)
    void getHit()

    boolean isDead()
    boolean collides()

    float getX()
    float getY()
}

class Spike{

}

enum Directions{
    LEFT,
    LEFT_UP,
    UP,
    RIGHT_UP,
    RIGHT,
    RIGHT_DOWN,
    DOWN,
    LEFT_DOWN,
    NOTHING
}

abstract class HumanoidEnemy{
    BufferedImage enemySpriteRight : protected
    BufferedImage enemySpriteLeft : protected

    SpriteSheet sheet : protected

    boolean dead : protected
    boolean facingRight : protected
    boolean isFollowingPlayer : protected

    int dropChance : private
    int frameTimeout : protected

    float x : protected
    float y : protected

    Player joc.player : protected
    Directions playerCollisionDirection : private

    Map joc.map : protected

    void dropHeart() : protected
    void setFollowingPlayer(boolean toggle) : public

    boolean isFollowingPlayer() : public
    boolean collidesWithPlayer() : public
}

class RegularEnemy{

}

class ArcherEnemy{

}

class RockThrowerEnemy{
    int patrolHorizStartingPoint : private
    int patrolHorizOffsetLimit : private
    int patrolSpeed : private
    int hitCapacity : private
    int takesDamageOnRock : private
    int timeout : private
    int timeNearPlayer : private

    float moveSpeed : private

    Directions movementDirection : private

    void followPlayer() : private

    double getRecoilAngle(double degrees) : private
    void patrol() : private
}

Projectile ^-- ArrowProjectile
Projectile ^-- RockProjectile

HumanoidEnemy ^-- RegularEnemy
HumanoidEnemy ^-- ArcherEnemy
HumanoidEnemy ^-- RockThrowerEnemy

Enemy ^-- Spike
Enemy ^-- HumanoidEnemy

GameWindow "1" o-- "1" Player
GameWindow "1" o-- "1.." Enemy

Directions . RockThrowerEnemy
Directions . HumanoidEnemy

Player "1" *-- "1.." RockProjectile
ArcherEnemy "1" *-- "1.." ArrowProjectile
RockThrowerEnemy "1" *-- "1.." RockProjectile

GameWindow "1" o-- "1.." Projectile

@enduml
